<resources>
    <string name="app_name">WeatherApp</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="geolocation">Мое местоположение</string>
    <string name="switch_city">Сменить город</string>
    <string name="local_normal">Данные загруженные ранее соответствуют вашей геопозиции</string>
    <string name="city_normal">Данные по выбранному Вами городом уже отображаются</string>
    <string name="choice_city">Выберите город</string>
    <string name="message_error">Что-то пошло не так.\nПопробуйте позже.</string>
    <string name="o">o</string>
    <string name="weather">Погода</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="wind">Ветер</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="rain">Дождь</string>
</resources>
